# moos-ivp-internship

./: README
lib/: libBHV_CollabEstimate.dylib  libBHV_Cover.dylib  libBHV_Defense_Multi.dylib  libBHV_FrontEstimate.dylib  libBHV_FrontOscillate.dylib  libBHV_Pulse.dylib  libBHV_SimpleWaypoint.dylib  libBHV_ZigLeg.dylib
missions/alder/: alder.bhv  alder.moos
missions/alpha_kayak/: .LastOpenedMOOSLogDirectory  launch_vehicle.sh  targ_felix.moos
missions/alpha_kayak/LOG_FELIX_25_4_2017_____17_32_39/: LOG_FELIX_25_4_2017_____17_32_39._moos  LOG_FELIX_25_4_2017_____17_32_39.alog  LOG_FELIX_25_4_2017_____17_32_39.slog  LOG_FELIX_25_4_2017_____17_32_39.ylog
missions/defend/: ToDo.txt  ToDo.txt~  converter.sh~  launch_EA_FA.sh  launch_EA_FD.sh  launch_ED_FA.sh  launch_ED_FD.sh  launch_simulation.sh  log_converter.py  log_converter.py~  plug_uFldNodeBroker.moos  tester.sh
missions/defend/m200/: launch_m200_attack.sh  launch_m200_defend.sh  meta_m200.bhv  meta_m200.moos  plug_pHelmIvP.moos  plug_pLogger.moos  plug_uFldNodeBroker.moos
missions/defend/motorboat/: launch_motorboat.sh  plug_iGPSDevice.moos
missions/defend/results_1/results_EA_FA/test_0/: evan.alog  felix.alog  shoreside.alog
missions/defend/results_1/results_EA_FA/test_1/: evan.alog  felix.alog  shoreside.alog
missions/defend/results_1/results_EA_FA/test_10/: evan.alog  felix.alog  shoreside.alog
missions/defend/results_1/results_EA_FA/test_11/: evan.alog  felix.alog  (+1 more)
missions/defend/results_dataset/train_1/: test.csv  train.csv
missions/defend/shoreside/: meta_shoreside.moos
missions/fourship/: launch.sh  meta_shoreside.moos  meta_vehicle.bhv  plug_pNodeReporter.moos  plug_uFldNodeBroker.moos
missions/lab_04/prime_test/: .LastOpenedMOOSLogDirectory  tester.moos
missions/lab_06/alpha/: alpha.bhv  alpha.moos
missions/lab_06/bravo_loiter/: bravo.bhv  bravo.moos
missions/lab_06/bravo_loiter_dbl/: bravo.bhv  bravo.moos
missions/lab_06/bravo_loiter_uuv/: .LastOpenedMOOSLogDirectory  bravo.bhv  bravo.moos
missions/lab_06/bravo_uuv_surface/: bravo.bhv
missions/lab_07/alpha_bravo_pshare/: alpha.moos  bravo.bhv  bravo.moos  launch.sh  shoreside.moos
missions/lab_07/alpha_pshare/: alpha.moos  launch.sh  shoreside.moos
missions/lab_07/ditributed_TSP/: meta_vehicle.moos
missions/lab_07/henry_gilda_auto_refuel/: meta_vehicle.bhv  meta_vehicle.moos
missions/lab_07/henry_gilda_baseline/: meta_shoreside.moos
missions/lab_07/henry_gilda_refuel/: meta_shoreside.moos  meta_vehicle.bhv
missions/lab_07/xrelay_pshare/: .LastOpenedMOOSLogDirectory  x_relay_apples.moos  x_relay_pears.moos
missions/lab_09/charlie_dana_baseline/: meta_shoreside.moos
missions/lab_09/charlie_dana_message/: meta_vehicle.moos
missions/lab_09/charlie_dana_reassign/: meta_shoreside.moos  meta_vehicle.moos  plug_uTimerScript.moos
missions/lab_10/jake_kasper/: launch_both.sh  launch_vehicle.sh  meta_vehicle.bhv  meta_vehicle.moos  plug_uFldHazardMgrX.moos  plug_uFldHazardMgrY.moos
missions/lab_15/alpha_ZigLeg/: launch.sh  zigLeg.bhv  zigLeg.moos
missions/lab_15/alpha_range_pulse/: alpha.bhv  alpha.moos
missions/lab_16/front_estimate/: launch.sh  launch_1.sh  launch_2_vehicles.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle_1.bhv  plug_uFldCTDSensor_2.moos
missions/lab_16/front_estimate_baseline/: meta_shoreside.moos  plug_uFldCTDSensor.moos
missions/lab_16/in_water_front_estimate/: launch_archie.sh  launch_betty.sh  launch_shoreside.sh  meta_shoreside.moos  meta_vehicle.moos  plug_origin_warp.moos  plug_pFrontEstimate.moos  plug_uFldNodeBroker.moos
missions/machine_learning/: linear_behavior_classifier.py  linear_behavior_classifier.py~  linear_classifier_tutorial.py
missions/machine_learning/Model/: events.out.tfevents.1502920379.austria  graph.pbtxt  model.ckpt-1.index  model.ckpt-200.index
missions/machine_learning/Model/eval/: events.out.tfevents.1502920395.austria
missions/ml_data_generator/: launch.sh  meta_shoreside.moos  meta_vehicle.bhv  tester.sh
missions/ml_data_generator/test_results/test_0/: gilda.alog  henry.alog  shoreside.alog
missions/ml_data_generator/test_results/test_1/: gilda.alog  henry.alog  shoreside.alog
missions/ml_data_generator/test_results/test_2/: gilda.alog  henry.alog  shoreside.alog
missions/ml_data_generator/test_results/test_3/: gilda.alog  henry.alog  shoreside.alog
missions/ml_data_generator/test_results/test_4/: gilda.alog  henry.alog  shoreside.alog
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_Defense_Multi.h~  CMakeLists.txt  NodeReportDefense.cpp  NodeReportDefense.h
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.h  Point.cpp  Point.h
src/pHazardPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  Point.cpp  Point.h  main.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPointAssignML/: PointAssign.cpp  PointAssign.h
src/pPrimeFactor/: CMakeLists.txt  PrimeFactor.cpp  PrimeFactor.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  PrimeNumber.cpp  PrimeNumber.h  main.cpp
src/pPrimeFactorTester/: CMakeLists.txt  PrimeFactorTester.cpp  PrimeFactorTester.h  PrimeFactorTester_Info.cpp  PrimeFactorTester_Info.h  main.cpp
src/uFldHazardMgrX/: HazardMgr.cpp  HazardMgr.h
src/uFldHazardMgrX_BAK/: CMakeLists.txt  HazardMgr.cpp  HazardMgr.h
src/uFldHazardMgrY/: CMakeLists.txt  HazardMgr.cpp  HazardMgr.h
(+582 files in other folders)
